Add BCIInstanceEvent class and integrate event publishing in service methods. (#425)