@@ -1,7 +1,9 @@
 package ca.uqam.latece.evo.server.core.service;
 
+import ca.uqam.latece.evo.server.core.enumeration.ChangeAspect;
 import ca.uqam.latece.evo.server.core.enumeration.OutcomeType;
 import ca.uqam.latece.evo.server.core.enumeration.TimeCycle;
+import ca.uqam.latece.evo.server.core.event.BCIInstanceEvent;
 import ca.uqam.latece.evo.server.core.model.Role;
 import ca.uqam.latece.evo.server.core.model.instance.*;
 import ca.uqam.latece.evo.server.core.service.instance.*;
@@ -11,6 +13,9 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.event.ApplicationEvents;
+import org.springframework.test.context.event.RecordApplicationEvents;
+import org.springframework.web.context.annotation.ApplicationScope;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -21,7 +26,10 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * Tests methods found in BehaviorChangeInterventionInstanceService in a containerized setup.
  * @author Julien Champagne.
+ * @author Edilton Lima dos Santos
  */
+@RecordApplicationEvents
+@ApplicationScope
 @ContextConfiguration(classes = {BehaviorChangeInterventionInstance.class, BehaviorChangeInterventionInstanceService.class})
 public class BehaviorChangeInterventionInstanceServiceTest extends AbstractServiceTest {
     @Autowired
@@ -49,6 +57,9 @@ public class BehaviorChangeInterventionInstanceServiceTest extends AbstractServi
     private BCIModuleInstanceService bciModuleInstanceService;
 
     private BehaviorChangeInterventionInstance bciInstance;
+
+    @Autowired
+    private ApplicationEvents applicationEvents;
 
     @BeforeEach
     public void setUp() {
@@ -126,7 +137,7 @@ public class BehaviorChangeInterventionInstanceServiceTest extends AbstractServi
         List<BehaviorChangeInterventionInstance> result = bciInstanceService.findByPatientId(bciInstance.getPatient().getId());
 
         assertFalse(result.isEmpty());
-        assertEquals(bciInstance.getId(), result.get(0).getId());
+        assertEquals(bciInstance.getId(), result.getFirst().getId());
     }
 
     @Test
@@ -134,14 +145,24 @@ public class BehaviorChangeInterventionInstanceServiceTest extends AbstractServi
         List<BehaviorChangeInterventionInstance> result = bciInstanceService.findByCurrentPhaseId(bciInstance.getCurrentPhase().getId());
 
         assertFalse(result.isEmpty());
-        assertEquals(bciInstance.getId(), result.get(0).getId());
+        assertEquals(bciInstance.getId(), result.getFirst().getId());
     }
 
     @Test
     void testFindByPhasesId() {
-        List<BehaviorChangeInterventionInstance> result = bciInstanceService.findByPhasesId(bciInstance.getPhases().get(0).getId());
+        List<BehaviorChangeInterventionInstance> result = bciInstanceService.findByPhasesId(bciInstance.getPhases().getFirst().getId());
 
         assertFalse(result.isEmpty());
-        assertEquals(bciInstance.getId(), result.get(0).getId());
+        assertEquals(bciInstance.getId(), result.getFirst().getId());
+    }
+
+    @Test
+    void testPublishEvent() {
+        bciInstance.getPatient().setOccupation("Professor");
+        BehaviorChangeInterventionInstance updated = bciInstanceService.update(bciInstance);
+
+        assertEquals(1, applicationEvents.stream(BCIInstanceEvent.class).
+                filter(event -> event.getChangeAspect().equals(ChangeAspect.STARTED) &&
+                        event.getCurrentPhase().equals(bciInstance.getCurrentPhase())).count());
     }
 }
